# PaintFE

./: .gitignore  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_PLAN.md  INVESTIGATION_FINDINGS.md  README.md  TEST_PLAN.md
.github/workflows/: aur-publish.yml  ci.yml  release.yml  scorecard.yml
docs/: modularization_handoff.md
locales/: be.txt  de.txt  en.txt  es.txt  fe.txt  fr.txt  it.txt  ja.txt  nl.txt  pl.txt  pt.txt  ru.txt  tr.txt  zh-CN.txt  zh-TW.txt
packaging/appimage/PaintFE.AppDir/: AppRun
packaging/aur/: PKGBUILD  PKGBUILD-bin
packaging/flatpak/: io.github.paintfe.PaintFE.metainfo.xml
packaging/msix/: AppxManifest.xml  build-msix.ps1
plans/: bugfix_plan.md  tool_info_overlay_plan.md
src/: app.rs  assets.rs  canvas.rs  cli.rs  io.rs  ipc.rs  lib.rs  linux_key_probe.rs  logger.rs  main.rs  project.rs  signal_draw.rs  signal_widgets.rs  theme.rs  windows_key_probe.rs
src/app/: bootstrap.rs  ops.rs  panels.rs  project_io.rs  runtime.rs  types.rs
src/app/ops/: dialogs.rs  helpers.rs
src/canvas/: canvas_state.rs  canvas_state_impl.rs  defs.rs  layers.rs  mirror.rs  selection.rs  soft_proof.rs  tiled_image.rs  view_full.rs
src/canvas/view/: core.rs  helpers.rs  overlay.rs
src/components/: colors.rs  dialogs.rs  history.rs  layers.rs  mod.rs  palette.rs  script_editor.rs  tools.rs
src/components/layers/: list.rs  operations.rs  settings.rs
src/config/: brushes.rs  icons.rs  keybindings.rs  mod.rs  settings.rs
src/document/: canvas_state.rs  layer.rs  mirror.rs  mod.rs  selection.rs  text.rs  tiled_image.rs
src/gpu/: compositor.rs  compute.rs  context.rs  renderer.rs  shaders.rs  texture.rs
src/gpu/compute/: blur.rs  color_ops.rs  flood_fill.rs  helpers.rs  liquify.rs  mesh_warp.rs  previews.rs
src/ops/: canvas_ops.rs  clipboard.rs  color_removal.rs  dialogs.rs  effect_dialogs.rs  effects.rs  mod.rs  scripting.rs  shapes.rs  text.rs  text_layer.rs  transform.rs
src/render/: cpu.rs  gpu.rs
src/services/: clipboard.rs  io.rs  ipc.rs  mod.rs  project.rs  scripting.rs
src/ui/: mod.rs
tests/: gpu_pipelines.rs  inpaint.rs  io_roundtrip.rs  layer_ops.rs  scripting.rs  selection.rs  text_layer.rs  tool_strokes.rs  transform_ops.rs  visual_adjustments.rs  visual_blend.rs  visual_filters.rs  visual_shapes.rs  visual_transforms.rs
tests/common/: mod.rs
(+75 files in other folders)
